--- a/index.html
+++ b/index.html
@@ -49,17 +49,15 @@
                <div class="login-form form-register hidden">
                    <h2> Crear cuenta</h2>
                    <form action="/register" method="POST">
-                       <input type="text" placeholder="Nombres" name = "nombre" required>
-                       <input type="text" placeholder="Apellidos" name = "apellidos" required>
-                       <input type="text" placeholder="Cédula" name = "cedula" required>
-                       <input type = "text" placeholder="Correo Electrónico" name="correo" required>
-                       <input type="text" placeholder="Telefono" name = "telefono" required>
-                       <input type="text" placeholder="Dirección" name = "direccion" required>
-                       <input type="text" placeholder="Fecha de Nacimiento" name = "fechNac" required>
-                       <input type="text" placeholder="Elija su rol: admin/cliente" name = "rol" required>
-                       <input type="text" placeholder="Usuario" name="usuario" required>
-                       <input type="password" placeholder="Contraseña" name="password" required>
-                       <button type="submit" class = "login-btn" style = "background-color: green;">Registrarse</button>
+                        <input type="text" placeholder="Cédula" name = "cedula" required>
+                        <input type="text" placeholder="Nombres" name = "nombre" required>
+                        <input type="text" placeholder="Apellidos" name = "apellidos" required>
+                        <input type="text" placeholder="Telefono" name = "telefono" required>
+                        <input type="text" placeholder="Especialidad" name = "especialidad" required>
+                        <input type="text" placeholder="Correo Electrónico" name="correo" required>
+                        <input type="text" placeholder="Usuario" name="usuario" required>
+                        <input type="password" placeholder="Contraseña" name="password" required>
+                        <button type="submit" class = "login-btn" style = "background-color: green;">Registrarse</button>
 
                        <div class="login-footer">
                            <p> ¿Ya tienes cuenta? <a href="#" id="show-login">Iniciar Sesión</a> </p>
